tests/invalid/bad_atomic_long_imm.s
  .text

  .global _start
_start:
  fad r1, r2, [0x10000]
